--- a/Homework_03.ipynb
+++ b/Homework_03.ipynb
@@ -33,10 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "647c362e-70fa-4713-a7e5-b9172b3c4a7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-01-30 16:34:02.216160: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2026-01-30 16:34:04.980842: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2026-01-30 16:34:08.372421: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
+     ]
+    }
+   ],
    "source": [
     "# Useful imports\n",
     "\n",
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "44fc0cdc-c99e-4983-8526-09ff935ea698",
    "metadata": {},
    "outputs": [],
@@ -146,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "6ad4815c-54bc-4bcb-b275-ac96dda6ae28",
    "metadata": {},
    "outputs": [],
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "1639012c-346c-4ac6-80fe-0e4a05155e3d",
    "metadata": {},
    "outputs": [],
@@ -270,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "6e526b41-6c2e-45dd-8b26-cc72d4da26df",
    "metadata": {},
    "outputs": [
@@ -279,11 +290,11 @@
      "output_type": "stream",
      "text": [
       "full dataset shape: (581012, 54)\n",
-      "balanced subset shape: (7000, 54) class counts: {2: 1000, 0: 1000, 4: 1000, 5: 1000, 1: 1000, 3: 1000, 6: 1000}\n",
+      "balanced subset shape: (7000, 54) class counts: {np.int32(2): 1000, np.int32(0): 1000, np.int32(4): 1000, np.int32(5): 1000, np.int32(1): 1000, np.int32(3): 1000, np.int32(6): 1000}\n",
       "shapes: X_train (4200, 54) X_val (1400, 54) X_test (1400, 54)\n",
-      "train: total=4200, per-class={2: 600, 1: 600, 0: 600, 3: 600, 5: 600, 4: 600, 6: 600}\n",
-      "val  : total=1400, per-class={1: 200, 6: 200, 5: 200, 4: 200, 3: 200, 2: 200, 0: 200}\n",
-      "test : total=1400, per-class={0: 200, 6: 200, 2: 200, 3: 200, 4: 200, 5: 200, 1: 200}\n",
+      "train: total=4200, per-class={np.int32(2): 600, np.int32(1): 600, np.int32(0): 600, np.int32(3): 600, np.int32(5): 600, np.int32(4): 600, np.int32(6): 600}\n",
+      "val  : total=1400, per-class={np.int32(1): 200, np.int32(6): 200, np.int32(5): 200, np.int32(4): 200, np.int32(3): 200, np.int32(2): 200, np.int32(0): 200}\n",
+      "test : total=1400, per-class={np.int32(0): 200, np.int32(6): 200, np.int32(2): 200, np.int32(3): 200, np.int32(4): 200, np.int32(5): 200, np.int32(1): 200}\n",
       "class labels: [0 1 2 3 4 5 6]\n"
      ]
     }
@@ -381,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "d7a66816-a103-4477-9693-3936745dbcf1",
    "metadata": {
     "scrolled": true
@@ -414,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "973edccc-a057-402b-be00-3d53e0c8e97c",
    "metadata": {},
    "outputs": [
@@ -422,9 +433,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1769781419.720760 4346262 pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "I0000 00:00:1769781419.720891 4346262 pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+      "2026-01-30 16:36:34.618843: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
      ]
     },
     {
@@ -537,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "733bc4a8-3480-4a21-aec3-91404d795035",
    "metadata": {},
    "outputs": [
@@ -677,12 +686,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c480aa5a-21cc-4b50-a49f-87dcb3eaa9ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training model with activation: relu\n",
+      "Best val accuracy = 0.7650 at epoch 46\n",
+      "\n",
+      "Training model with activation: sigmoid\n",
+      "Best val accuracy = 0.7043 at epoch 50\n",
+      "\n",
+      "Training model with activation: tanh\n",
+      "Best val accuracy = 0.7550 at epoch 49\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'relu': 0.7649999856948853,\n",
+       " 'sigmoid': 0.704285740852356,\n",
+       " 'tanh': 0.7549999952316284}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here. Add as many cells as you need. \n"
+    "# Your code here. Add as many cells as you need. \n",
+    "\n",
+    "activations = ['relu', 'sigmoid', 'tanh']\n",
+    "results = {}\n",
+    "\n",
+    "for act in activations:\n",
+    "    print(f\"\\nTraining model with activation: {act}\")\n",
+    "\n",
+    "    model = build_model(\n",
+    "        X_train.shape[1],\n",
+    "        [(64, act, 0.0, 0.0), (32, act, 0.0, 0.0)],\n",
+    "        n_classes\n",
+    "    )\n",
+    "\n",
+    "    model.compile(\n",
+    "        optimizer='adam',\n",
+    "        loss='sparse_categorical_crossentropy',\n",
+    "        metrics=['accuracy']\n",
+    "    )\n",
+    "\n",
+    "    early_stop = EarlyStopping(\n",
+    "        monitor='val_loss',\n",
+    "        patience=5,\n",
+    "        restore_best_weights=True\n",
+    "    )\n",
+    "\n",
+    "    history = model.fit(\n",
+    "        X_train, y_train,\n",
+    "        validation_data=(X_val, y_val),\n",
+    "        epochs=50,\n",
+    "        batch_size=128,\n",
+    "        callbacks=[early_stop],\n",
+    "        verbose=0\n",
+    "    )\n",
+    "\n",
+    "    # Find epoch of minimum validation loss\n",
+    "    min_val_loss_epoch = np.argmin(history.history['val_loss'])\n",
+    "    best_val_acc = history.history['val_accuracy'][min_val_loss_epoch]\n",
+    "\n",
+    "    print(f\"Best val accuracy = {best_val_acc:.4f} at epoch {min_val_loss_epoch+1}\")\n",
+    "\n",
+    "    results[act] = best_val_acc\n",
+    "\n",
+    "results\n"
    ]
   },
   {
@@ -695,19 +775,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "842a7eac-08e9-4fbe-9b49-6eacf9ac0cd0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set a1a to the activation function which provided the best validation accuracy at the epoch of minimum validation loss\n",
     "\n",
-    "a1a = ...             # Replace with integer 0 (relu), 1 (sigmoid), or 2 (tanh)"
+    "a1a = 0             # Replace with integer 0 (relu), 1 (sigmoid), or 2 (tanh)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "3a9a0198-5fca-4534-bc32-038d1c9a77b2",
    "metadata": {},
    "outputs": [
@@ -715,7 +795,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a1a = Ellipsis\n"
+      "a1a = 0\n"
      ]
     }
    ],
@@ -728,19 +808,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "3d4178f3-2ec1-4d1f-a0e3-6404b85076d8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set a1b to the validation accuracy found by this best activation function\n",
     "\n",
-    "a1b = 0.0             # Replace 0.0 with your answer"
+    "a1b = 0.7649999856948853             # Replace 0.0 with your answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "e0d6f803-0faa-4da0-aa22-4218552d4702",
    "metadata": {},
    "outputs": [
@@ -748,7 +828,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a1b = 0.0000\n"
+      "a1b = 0.7650\n"
      ]
     }
    ],
@@ -788,12 +868,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "af5333b3-69f2-422b-9e36-112ad3c38d4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training model with learning rate: 0.1\n",
+      "Best val accuracy = 0.5893 at epoch 2\n",
+      "\n",
+      "Training model with learning rate: 0.01\n",
+      "Best val accuracy = 0.7450 at epoch 8\n",
+      "\n",
+      "Training model with learning rate: 0.001\n",
+      "Best val accuracy = 0.7600 at epoch 50\n",
+      "\n",
+      "Training model with learning rate: 0.0001\n",
+      "Best val accuracy = 0.6500 at epoch 50\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0.1: 0.5892857313156128,\n",
+       " 0.01: 0.7450000047683716,\n",
+       " 0.001: 0.7599999904632568,\n",
+       " 0.0001: 0.6499999761581421}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here. Add as many cells as you need. \n"
+    "# Your code here. Add as many cells as you need. \n",
+    "\n",
+    "learning_rates = [0.1, 0.01, 0.001, 0.0001]\n",
+    "lr_results = {}\n",
+    "\n",
+    "for lr in learning_rates:\n",
+    "    print(f\"\\nTraining model with learning rate: {lr}\")\n",
+    "\n",
+    "    model = build_model(\n",
+    "        X_train.shape[1],\n",
+    "        [(64, 'relu', 0.0, 0.0), (32, 'relu', 0.0, 0.0)],\n",
+    "        n_classes\n",
+    "    )\n",
+    "\n",
+    "    model.compile(\n",
+    "        optimizer=Adam(learning_rate=lr),\n",
+    "        loss='sparse_categorical_crossentropy',\n",
+    "        metrics=['accuracy']\n",
+    "    )\n",
+    "\n",
+    "    early_stop = EarlyStopping(\n",
+    "        monitor='val_loss',\n",
+    "        patience=5,\n",
+    "        restore_best_weights=True\n",
+    "    )\n",
+    "\n",
+    "    history = model.fit(\n",
+    "        X_train, y_train,\n",
+    "        validation_data=(X_val, y_val),\n",
+    "        epochs=50,\n",
+    "        batch_size=128,\n",
+    "        callbacks=[early_stop],\n",
+    "        verbose=0\n",
+    "    )\n",
+    "\n",
+    "    min_val_loss_epoch = np.argmin(history.history['val_loss'])\n",
+    "    best_val_acc = history.history['val_accuracy'][min_val_loss_epoch]\n",
+    "\n",
+    "    print(f\"Best val accuracy = {best_val_acc:.4f} at epoch {min_val_loss_epoch+1}\")\n",
+    "\n",
+    "    lr_results[lr] = best_val_acc\n",
+    "\n",
+    "lr_results\n"
    ]
   },
   {
@@ -806,19 +960,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "d8df2112-8ee8-47fd-91eb-5925479a709a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set a2a to the learning rate which provided the best validation accuracy at the epoch of minimum validation loss\n",
     "\n",
-    "a2a = 0.0           # Replace 0.0 with your answer"
+    "a2a = .001           # Replace 0.0 with your answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "d4a04f78-5620-41c8-b7ea-e1a2ae99b87a",
    "metadata": {},
    "outputs": [
@@ -826,7 +980,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a2a = 0.000000\n"
+      "a2a = 0.001000\n"
      ]
     }
    ],
@@ -839,19 +993,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "c2abacc0-e2b9-49b0-8156-6b96b26571ac",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set a2b to the validation accuracy found by this best learning rate\n",
     "\n",
-    "a2b = 0.0             # Replace 0.0 with your answer"
+    "a2b = 0.7599999904632568             # Replace 0.0 with your answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "4b7289fe-84e8-4fb4-bf74-83ebcfdfff3e",
    "metadata": {},
    "outputs": [
@@ -859,7 +1013,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a2b = 0.0000\n"
+      "a2b = 0.7600\n"
      ]
     }
    ],
@@ -892,17 +1046,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "779f9f0d-bae4-4f5b-9212-cf72ad8f0331",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training model with dropout rates: (0.0, 0.0)\n",
+      "Best val accuracy = 0.7593 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.0, 0.2)\n",
+      "Best val accuracy = 0.6900 at epoch 38\n",
+      "\n",
+      "Training model with dropout rates: (0.0, 0.4)\n",
+      "Best val accuracy = 0.6700 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.0, 0.6)\n",
+      "Best val accuracy = 0.6736 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.2, 0.0)\n",
+      "Best val accuracy = 0.7093 at epoch 38\n",
+      "\n",
+      "Training model with dropout rates: (0.2, 0.2)\n",
+      "Best val accuracy = 0.5850 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.2, 0.4)\n",
+      "Best val accuracy = 0.5536 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.2, 0.6)\n",
+      "Best val accuracy = 0.5171 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.4, 0.0)\n",
+      "Best val accuracy = 0.6850 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.4, 0.2)\n",
+      "Best val accuracy = 0.5386 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.4, 0.4)\n",
+      "Best val accuracy = 0.5286 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.4, 0.6)\n",
+      "Best val accuracy = 0.5029 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.6, 0.0)\n",
+      "Best val accuracy = 0.6821 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.6, 0.2)\n",
+      "Best val accuracy = 0.5229 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.6, 0.4)\n",
+      "Best val accuracy = 0.4829 at epoch 40\n",
+      "\n",
+      "Training model with dropout rates: (0.6, 0.6)\n",
+      "Best val accuracy = 0.4829 at epoch 40\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{(0.0, 0.0): 0.7592856884002686,\n",
+       " (0.0, 0.2): 0.6899999976158142,\n",
+       " (0.0, 0.4): 0.6700000166893005,\n",
+       " (0.0, 0.6): 0.6735714077949524,\n",
+       " (0.2, 0.0): 0.7092857360839844,\n",
+       " (0.2, 0.2): 0.5849999785423279,\n",
+       " (0.2, 0.4): 0.5535714030265808,\n",
+       " (0.2, 0.6): 0.5171428322792053,\n",
+       " (0.4, 0.0): 0.6850000023841858,\n",
+       " (0.4, 0.2): 0.5385714173316956,\n",
+       " (0.4, 0.4): 0.5285714268684387,\n",
+       " (0.4, 0.6): 0.5028571486473083,\n",
+       " (0.6, 0.0): 0.6821428537368774,\n",
+       " (0.6, 0.2): 0.522857129573822,\n",
+       " (0.6, 0.4): 0.4828571379184723,\n",
+       " (0.6, 0.6): 0.4828571379184723}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here. Add as many cells as you need. \n"
+    "# Your code here. Add as many cells as you need. \n",
+    "import itertools\n",
+    "\n",
+    "dropout_values = [0.0, 0.2, 0.4, 0.6]\n",
+    "do_pair_results = {}\n",
+    "\n",
+    "for dr1, dr2 in itertools.product(dropout_values, repeat=2):\n",
+    "    print(f\"\\nTraining model with dropout rates: ({dr1}, {dr2})\")\n",
+    "\n",
+    "    model = build_model(\n",
+    "        X_train.shape[1],\n",
+    "        [(64, 'relu', dr1, 0.0), (32, 'relu', dr2, 0.0)],\n",
+    "        n_classes\n",
+    "    )\n",
+    "\n",
+    "    model.compile(\n",
+    "        optimizer=Adam(learning_rate=0.001),\n",
+    "        loss='sparse_categorical_crossentropy',\n",
+    "        metrics=['accuracy']\n",
+    "    )\n",
+    "\n",
+    "    early_stop = EarlyStopping(\n",
+    "        monitor='val_loss',\n",
+    "        patience=5,\n",
+    "        restore_best_weights=True\n",
+    "    )\n",
+    "\n",
+    "    history = model.fit(\n",
+    "        X_train, y_train,\n",
+    "        validation_data=(X_val, y_val),\n",
+    "        epochs=40,\n",
+    "        batch_size=128,\n",
+    "        callbacks=[early_stop],\n",
+    "        verbose=0\n",
+    "    )\n",
+    "\n",
+    "    min_val_loss_epoch = np.argmin(history.history['val_loss'])\n",
+    "    best_val_acc = history.history['val_accuracy'][min_val_loss_epoch]\n",
+    "\n",
+    "    print(f\"Best val accuracy = {best_val_acc:.4f} at epoch {min_val_loss_epoch+1}\")\n",
+    "\n",
+    "    do_pair_results[(dr1, dr2)] = best_val_acc\n",
+    "\n",
+    "do_pair_results\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "29a8ab51-f715-4547-a69e-38e581b612eb",
    "metadata": {},
    "outputs": [],
@@ -910,12 +1187,12 @@
     "# Set a3a to the pair (dropout_rate_64,dropout_rate_32) of dropout rates for the two hidden layers which provided the best \n",
     "# validation accuracy at the epoch of minimum validation loss\n",
     "\n",
-    "a3a = (0.0,0.0)             # Replace (0.0,0.0) with your answer"
+    "a3a = (0.0, 0.0)             # Replace (0.0,0.0) with your answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "a3966b26-5d5d-44e9-840b-9e2e54e3480e",
    "metadata": {},
    "outputs": [
@@ -936,19 +1213,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "76b6a2c7-7d04-4cbb-97b8-a6a319468509",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set a3b to the validation accuracy found by this best pair of dropout rates\n",
     "\n",
-    "a3b = 0.0             # Replace 0.0 with your answer"
+    "a3b = 0.7592856884002686             # Replace 0.0 with your answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "8426d026-e717-4ec0-8b70-ed29401f7b1a",
    "metadata": {},
    "outputs": [
@@ -956,7 +1233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a3b = 0.0000\n"
+      "a3b = 0.7593\n"
      ]
     }
    ],
@@ -1277,7 +1554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1291,7 +1568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
